Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -75,7 +75,7 @@
    "source": [
     "# create db, connection, and cursor here\n",
     "import sqlite3\n",
-    "conn"
+    "conn = sqlite3.connect('pets_database')"
    ]
   },
   {
