--- a/index.ipynb
+++ b/index.ipynb
@@ -75,7 +75,8 @@
    "source": [
     "# create db, connection, and cursor here\n",
     "import sqlite3\n",
-    "conn = sqlite3.connect('pets_database')"
+    "conn = sqlite3.connect('pets_database.db')\n",
+    "cur = conn.cursor"
    ]
   },
   {
