Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -69,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create db, connection, and cursor here\n",
     "import sqlite3\n",
     "conn = sqlite3.connect('pets_database.db')\n",
-    "cur = conn.cursor"
+    "cur = conn.cursor()"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create table here"
+    "# create table here\n"
    ]
   },
   {
