Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -106,7 +106,8 @@
    "outputs": [],
    "source": [
     "# create table here\n",
-    "cur.execute"
+    "cur.execute('''\n",
+    "            C''')"
    ]
   },
   {
