Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -107,7 +107,9 @@
    "source": [
     "# create table here\n",
     "cur.execute('''\n",
-    "            C''')"
+    "            CREATE TABLE cats\n",
+    "            (id INTEGER\n",
+    "            )''')"
    ]
   },
   {
