Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -108,8 +108,8 @@
     "# create table here\n",
     "cur.execute('''\n",
     "            CREATE TABLE cats\n",
-    "            (id INTEGER\n",
-    "            )''')"
+    "            (id INTEGER PRIMARY KEY,\n",
+    "            name TEXT)''')"
    ]
   },
   {
