Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -109,7 +109,9 @@
     "cur.execute('''\n",
     "            CREATE TABLE cats\n",
     "            (id INTEGER PRIMARY KEY,\n",
-    "            name TEXT)''')"
+    "            name TEXT,\n",
+    "            age INTEGER,\n",
+    "            breed TEXT);''')"
    ]
   },
   {
