Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -101,9 +101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f17a058c260>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create table here\n",
     "cur.execute('''\n",
@@ -133,7 +144,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert data here"
+    "# insert data here\n",
+    "cur.execute(INSET )"
    ]
   },
   {
