Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -145,7 +145,8 @@
    "outputs": [],
    "source": [
     "# insert data here\n",
-    "cur.execute(INSET )"
+    "cur.execute('''\n",
+    "            INSERT INTO ca''')"
    ]
   },
   {
