Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -146,7 +146,8 @@
    "source": [
     "# insert data here\n",
     "cur.execute('''\n",
-    "            INSERT INTO ca''')"
+    "            INSERT INTO cats (name, age, breed) VALUES\n",
+    "            (\"Ma)''')"
    ]
   },
   {
