--- a/index.ipynb
+++ b/index.ipynb
@@ -147,7 +147,7 @@
     "# insert data here\n",
     "cur.execute('''\n",
     "            INSERT INTO cats (name, age, breed) VALUES\n",
-    "            (\"Ma)''')"
+    "            (\"Maru\", 3, \"Scottish Fold\");''')"
    ]
   },
   {
