Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -147,6 +147,10 @@
     "# insert data here\n",
     "cur.execute('''\n",
     "            INSERT INTO cats (name, age, breed) VALUES\n",
+    "            (\"Maru\", 3, \"Scottish Fold\");''')\n",
+    "\n",
+    "cur.execute('''\n",
+    "            INSERT INTO cats (name, age, breed) VALUES\n",
     "            (\"Maru\", 3, \"Scottish Fold\");''')"
    ]
   },
