Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -151,7 +151,7 @@
     "\n",
     "cur.execute('''\n",
     "            INSERT INTO cats (name, age, breed) VALUES\n",
-    "            (\"Maru\", 3, \"Scottish Fold\");''')"
+    "            (\"Hana\", 1, \"Scottish Fold\");''')"
    ]
   },
   {
