--- a/index.ipynb
+++ b/index.ipynb
@@ -140,9 +140,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f17a058c260>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# insert data here\n",
     "cur.execute('''\n",
@@ -173,7 +184,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create owners table here"
+    "# create owners table here\n",
+    "cur.execute('''''')"
    ]
   },
   {
