--- a/index.ipynb
+++ b/index.ipynb
@@ -185,7 +185,9 @@
    "outputs": [],
    "source": [
     "# create owners table here\n",
-    "cur.execute('''''')"
+    "cur.execute('''\n",
+    "            CREATE TABLE owners\n",
+    "            id''')"
    ]
   },
   {
