Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,8 @@
     "# create owners table here\n",
     "cur.execute('''\n",
     "            CREATE TABLE owners\n",
-    "            id''')"
+    "            (id INTEGER PRIMARY KEY,\n",
+    "            name TEX)''')"
    ]
   },
   {
