--- a/index.ipynb
+++ b/index.ipynb
@@ -180,15 +180,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f17a058c260>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create owners table here\n",
     "cur.execute('''\n",
     "            CREATE TABLE owners\n",
     "            (id INTEGER PRIMARY KEY,\n",
-    "            name TEX)''')"
+    "            name TEXT);''')"
    ]
   },
   {
