Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cursor.execute('''CREATE TABLE owners (id INTEGER PRIMARY KEY, name TEXT);''')"
+    "cur.execute('''CREATE TABLE owners (id INTEGER PRIMARY KEY, name TEXT);''')"
    ]
   },
   {
