--- a/index.ipynb
+++ b/index.ipynb
@@ -237,7 +237,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# alter table here"
+    "# alter table here\n",
+    "cur.execute('ALTER TAB')"
    ]
   },
   {
