Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,8 @@
    "outputs": [],
    "source": [
     "# alter table here\n",
-    "cur.execute('ALTER TAB')"
+    "cur.execute('''\n",
+    "            ALTER TABLE cats''')"
    ]
   },
   {
