--- a/index.ipynb
+++ b/index.ipynb
@@ -239,7 +239,7 @@
    "source": [
     "# alter table here\n",
     "cur.execute('''\n",
-    "            ALTER TABLE cats''')"
+    "            ALTER TABLE cats ADD COLUMN owner_id INTEGER;''')"
    ]
   },
   {
