--- a/index.ipynb
+++ b/index.ipynb
@@ -254,6 +254,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.execute('SELECT ')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
