--- a/index.ipynb
+++ b/index.ipynb
@@ -259,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cur.execute('SELECT ')"
+    "cur.execute('SELECT * FROM sqlite_master WHERE name=)"
    ]
   },
   {
