Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -257,9 +257,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('table',\n",
+       "  'cats',\n",
+       "  'cats',\n",
+       "  2,\n",
+       "  'CREATE TABLE cats\\n            (id INTEGER PRIMARY KEY,\\n            name TEXT,\\n            age INTEGER,\\n            breed TEXT, owner_id INTEGER)')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cur.execute('SELECT * FROM sqlite_master WHERE name=)"
+    "cur.execute('SELECT * FROM sqlite_master WHERE name=\"cats\";').fetchall()"
    ]
   },
   {
