--- a/index.ipynb
+++ b/index.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert new owner record here"
+    "# insert new owner record here\n"
    ]
   },
   {
