Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -313,7 +313,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert new owner record here\n"
+    "# insert new owner record here\n",
+    "cur.execute('''\n",
+    "            INSERT INTO on''')"
    ]
   },
   {
