Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -315,7 +315,7 @@
    "source": [
     "# insert new owner record here\n",
     "cur.execute('''\n",
-    "            INSERT INTO on''')"
+    "            INSERT INTO owners (name) VALUES (\"mug)''')"
    ]
   },
   {
