--- a/index.ipynb
+++ b/index.ipynb
@@ -309,13 +309,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f17a058c260>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# insert new owner record here\n",
     "cur.execute('''\n",
-    "            INSERT INTO owners (name) VALUES (\"mug)''')"
+    "            INSERT INTO owners (name) VALUES (\"mugumogu\");''')"
    ]
   },
   {
