Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -346,7 +346,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check new owner record here"
+    "# check new owner record here\n",
+    "cur.execute('''\n",
+    "            ''')"
    ]
   },
   {
