--- a/index.ipynb
+++ b/index.ipynb
@@ -342,13 +342,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f17a058c260>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# check new owner record here\n",
     "cur.execute('''\n",
-    "            ''')"
+    "            SELECT * FROM owners;''').fetchal"
    ]
   },
   {
