Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -342,16 +342,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x7f17a058c260>"
+       "[(1, 'mugumogu')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
    "source": [
     "# check new owner record here\n",
     "cur.execute('''\n",
-    "            SELECT * FROM owners;''').fetchal"
+    "            SELECT * FROM owners;''').fetchall()"
    ]
   },
   {
@@ -398,7 +398,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# check updated cats table here"
+    "# check updated cats table here\n",
+    "c"
    ]
   },
   {
