Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -399,7 +399,8 @@
    "outputs": [],
    "source": [
     "# check updated cats table here\n",
-    "c"
+    "cur.execute('''\n",
+    "            UPDATE cats SET owners''')"
    ]
   },
   {
