Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -400,7 +400,7 @@
    "source": [
     "# check updated cats table here\n",
     "cur.execute('''\n",
-    "            UPDATE cats SET owner_id = 1 WHERE name = \")"
+    "            UPDATE cats SET owner_id = 1 WHERE name = \"Maru\";)"
    ]
   },
   {
