--- a/index.ipynb
+++ b/index.ipynb
@@ -400,7 +400,10 @@
    "source": [
     "# check updated cats table here\n",
     "cur.execute('''\n",
-    "            UPDATE cats SET owner_id = 1 WHERE name = \"Maru\";''')\n"
+    "            UPDATE cats SET owner_id = 1 WHERE name = \"Maru\";''')\n",
+    "\n",
+    "cur.execute('''\n",
+    "            UPDATE cats w''')"
    ]
   },
   {
