Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -403,7 +403,7 @@
     "            UPDATE cats SET owner_id = 1 WHERE name = \"Maru\";''')\n",
     "\n",
     "cur.execute('''\n",
-    "            UPDATE cats w''')"
+    "            UPDATE cats SET owner_id = 1 WHERE name = :han)"
    ]
   },
   {
